# CeNTREX-TlF-Hamiltonian

./: .gitignore  README.md  pyproject.toml  setup.py
Examples/: Branching ratio calculator.ipynb  Finding exact eigenstates.ipynb  Microwave transition frequency calculator.ipynb  Motional magnetic field energy shifts.ipynb  Stark effect plots.ipynb  TlF energy levels (zero field).ipynb  Transition frequencies at high electric field.ipynb  create_hamiltonian_B.py  filter_states.py  plot_StarkShift_TlF_J1_excited.py  plot_StarkShift_TlF_J2_reduced.py  transform_basis.py
centrex_tlf_hamiltonian/hamiltonian/: B_coupled.py  B_uncoupled.py  __init__.py  basis_transformations.py  generate_hamiltonian.py  quantum_operators.py  utils.py  wigner.py
centrex_tlf_hamiltonian/hamiltonian/B_coupled_Omega/: __init__.py  rotational.py  stark.py
centrex_tlf_hamiltonian/states/: __init__.py  find_states.py  generate_states.py  population.py  states.py  utils.py
centrex_tlf_hamiltonian/transitions/: __init__.py  transition.py
examples/: Transition frequency calculator.ipynb
figures/: Q23_and_nearby.html
src/Examples/: create_hamiltonian.py  create_hamiltonian_B.py  create_hamiltonian_X.py  create_state.py  filter_states.py  plot_StarkShift_B.py  plot_StarkShift_TlF_J1_excited.py  plot_StarkShift_TlF_J1_excited_reduced.py  plot_StarkShift_TlF_J2.py  plot_StarkShift_TlF_J2_reduced.py  plot_ZeemanShift_B.py  transform_basis.py
src/centrex_TlF_hamiltonian/: __init__.py
src/centrex_TlF_hamiltonian/hamiltonian/: B_coupled.py  utils.py  (+11 more)
tests/: test_hamiltonian.py  test_states.py
(+15 files in other folders)
