[tool.poetry]
name = "centrex_tlf_hamiltonian"
version = "0.2.0"
description = "Code for calculating the TlF Hamiltonian"
authors = ["Olivier Grasdijk <jgrasdijk@anl.gov>"]
license = "MIT"
packages = [
    { include = "centrex_tlf_hamiltonian", from="src"},
]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.20"
sympy = "^1.10"
scipy = "^1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "sympy",
    "sympy.physics.wigner",
    "sympy.physics.quantum.cg",
    "scipy",
]
ignore_missing_imports = true